syntax = "proto2";
package errorpb;

import "metapb.proto";
import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

option java_package = "com.pingcap.tikv.grpc";

message NotLeader {
    optional uint64 region_id      = 1;
    optional metapb.Peer leader    = 2;
}

message StoreNotMatch {
}

message RegionNotFound {
    optional uint64 region_id = 1;
}

message KeyNotInRegion {
    optional bytes key         = 1;
    optional uint64 region_id  = 2;
    optional bytes start_key   = 3;
    optional bytes end_key     = 4;
}

message StaleEpoch {
    repeated metapb.Region new_regions = 1;
}

message ServerIsBusy {
}

message StaleCommand {
}

message RaftEntryTooLarge {
    optional uint64 region_id  = 1;
    optional uint64 entry_size = 2;
}

message Error {
    optional string message                         = 1;
    optional NotLeader not_leader                   = 2;
    optional RegionNotFound region_not_found        = 3;
    optional KeyNotInRegion key_not_in_region       = 4;
    optional StaleEpoch stale_epoch                 = 5;
    optional ServerIsBusy server_is_busy            = 6;
    optional StaleCommand stale_command             = 7;
    optional StoreNotMatch store_not_match          = 8;
    optional RaftEntryTooLarge raft_entry_too_large = 9;
}
